# llmLib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run.bat
src/: llm_api_client.cpp  llm_api_client.h  test_api_client.cpp
src/error/: LLMError.h
